 * Hdiv custom schema support for Spring 2.5.x (only core configuration, not Spring MVC).
 * Struts1 module for Hdiv. (Struts 1.3.8 support).
 * Fix Multipart request handing in Spring MVC (https://github.com/hdiv/hdiv/issues/14) and (https://github.com/hdiv/hdiv/issues/18).
 * JSF module for Hdiv. (JSF 1.1, 1.2, 2.0 and 2.1 support). Tested with Apache MyFaces and Sun RI.

Release 2.1.3
==================================

 * avoidValidationInUrlsWithoutParams only affects to link urls.
 * Absolute URLs are returned as absolute URLs in LinkUrlProcessor.
 * RequestDataValueProcessor for Grails applications.

Release 2.1.2
==================================

 * Confidential values are visible in the log.
 * Expose form state id to request. Simpler Ajax support.
 * Fixed (https://github.com/hdiv/hdiv/issues/3) error parsing parameters without value
 * Fixed (https://github.com/hdiv/hdiv/issues/4) bug with nested tags

Release 2.1.1
==================================

 * New 'debugMode' configuration mode to log the attacks but don`t stop it.
 * Register and use a group of editable validations by default (Sql injection, exec command and XSS attacks).
 * Add "registerDefaults" attribute to <hdiv:editableValidations> element to enable/disable default editable validations.
 * Add "enableDefaults" attribute to <hdiv:validationRule> element to enable/disable default editable validations per rule.
 * Make possible to update a existing state. Designed for ajax requests that update part of the page.
 * New 'maxPagesPerSession' configuration attribute to control the number of states in session.
 
Release 2.1.0
==================================

 * JavaDoc and License correction.

Release 2.1.0.RC3
==================================

 * Final Spring Framework 3.1.0 version support.
 * Configurable IUserData instance in the scheme.
 * Better support for anchored urls.
 * Refactor of the url splitting and processing classes. 

Release 2.1.0.RC2
==================================
