@@ -28,8 +28,7 @@ import org.hdiv.exception.HDIVException;
 import org.hdiv.util.HDIVUtil;
 
 /**
- * The principal class related with cryptography. It has the responsability to
- * encrypt and decrypt data.
+ * The principal class related with cryptography. It has the responsibility to encrypt and decrypt data.
  * 
  * @author Roberto Velasco
  * @see javax.crypto.Cipher
@@ -38,34 +37,33 @@ import org.hdiv.util.HDIVUtil;
 public class CipherHTTP implements ICipherHTTP {
 
 	/**
-	 * Universal version identifier. Deserialization uses this number to ensure that
-	 * a loaded class corresponds exactly to a serialized object.
-	 */	
+	 * Universal version identifier. Deserialization uses this number to ensure that a loaded class corresponds exactly
+	 * to a serialized object.
+	 */
 	private static final long serialVersionUID = -1731737465730669951L;
 
 	/**
-     *  Commons Logging instance.
-     */
-	private Log log = LogFactory.getLog(CipherHTTP.class);		
+	 * Commons Logging instance.
+	 */
+	private Log log = LogFactory.getLog(CipherHTTP.class);
 
 	/**
 	 * Name of the default cipher algorithm
 	 */
-	private static final String DEFAULT_ALGORITHM = "AES/CBC/PKCS5Padding";	
-	
+	private static final String DEFAULT_ALGORITHM = "AES/CBC/PKCS5Padding";
+
 	/**
 	 * Algorithm name of cipher object
 	 */
 	private String transformation = DEFAULT_ALGORITHM;
-	
+
 	/**
 	 * Provider name
 	 */
 	private String provider;
-	
+
 	/**
-	 * This object provides the functionality of a cryptographic cipher for
-	 * encryption and decryption
+	 * This object provides the functionality of a cryptographic cipher for encryption and decryption
 	 */
 	private Cipher cipher;
 
@@ -76,15 +74,19 @@ public class CipherHTTP implements ICipherHTTP {
 	/**
 	 * Generates a Cipher object that implements the specified transformation.
 	 */
-	public void init() {		
-		
-		try {			
-			if (this.provider == null) {			
+	public void init() {
+
+		try {
+			if (this.provider == null) {
 				this.cipher = Cipher.getInstance(this.transformation);
-			} else {			
+			} else {
 				this.cipher = Cipher.getInstance(this.transformation, this.provider);
 			}
-		
+
+			if (log.isDebugEnabled()) {
+				log.debug("New CipherHTTP instance [cipher = " + this.cipher + "]");
+			}
+
 		} catch (NoSuchProviderException e) {
 			throw new HDIVException(e.getMessage());
 
@@ -95,31 +97,33 @@ public class CipherHTTP implements ICipherHTTP {
 			throw new HDIVException(e.getMessage());
 		}
 	}
-	
+
 	/**
-	 * <p>Generates a Cipher object that implements the specified
-	 * <code>transformation</code>, initializes cipher vector and initializes
-	 * cipher to encryption mode with a key and a set of algorithm parameters.</p>
 	 * <p>
-	 * The name of the transformation, e.g., DES/CBC/PKCS5Padding. See Appendix A in
-	 * the <a href="../../../guide/security/jce/JCERefGuide.html#AppA"> Java
-	 * Cryptography Extension Reference Guide for information about standard
-	 * transformation names.
+	 * Generates a Cipher object that implements the specified <code>transformation</code>, initializes cipher vector
+	 * and initializes cipher to encryption mode with a key and a set of algorithm parameters.
+	 * </p>
+	 * <p>
+	 * The name of the transformation, e.g., DES/CBC/PKCS5Padding. See Appendix A in the <a
+	 * href="../../../guide/security/jce/JCERefGuide.html#AppA"> Java Cryptography Extension Reference Guide for
+	 * information about standard transformation names.
 	 * </p>
 	 * 
-	 * @param key the encryption key
-	 * @throws HDIVException if there is an initialization error.
+	 * @param key
+	 *            the encryption key
+	 * @throws HDIVException
+	 *             if there is an initialization error.
 	 */
 	public void initEncryptMode(Key key) {
 
 		try {
 			// vector initialization
 			this.ivSpec = new IvParameterSpec(key.getInitVector());
-			
+
 			// Constant used to initialize cipher to encryption mode
 			this.cipher.init(Cipher.ENCRYPT_MODE, key.getKey(), this.ivSpec);
 			this.encryptMode = true;
-			
+
 		} catch (Exception e) {
 			String errorMessage = HDIVUtil.getMessage("cipher.init.encrypt", e.getMessage());
 			throw new HDIVException(errorMessage, e);
@@ -127,98 +131,101 @@ public class CipherHTTP implements ICipherHTTP {
 	}
 
 	/**
-	 * Generates a Cipher object that implements the specified
-	 * <code>transformation</code>, initializes cipher vector and initializes
-	 * cipher to decryption mode with a key and a set of algorithm parameters.
+	 * Generates a Cipher object that implements the specified <code>transformation</code>, initializes cipher vector
+	 * and initializes cipher to decryption mode with a key and a set of algorithm parameters.
 	 * 
-	 * @param key the encryption key
-	 * @throws HDIVException if there is an initialization error.
+	 * @param key
+	 *            the encryption key
+	 * @throws HDIVException
+	 *             if there is an initialization error.
 	 */
 	public void initDecryptMode(Key key) {
-		
+
 		try {
-			// vector initialization 
+			// vector initialization
 			this.ivSpec = new IvParameterSpec(key.getInitVector());
-			
+
 			this.cipher.init(Cipher.DECRYPT_MODE, key.getKey(), this.ivSpec);
 			this.encryptMode = false;
-			
+
 		} catch (Exception e) {
 			String errorMessage = HDIVUtil.getMessage("cipher.init.decrypt", e.getMessage());
-			throw new HDIVException(errorMessage, e);						
+			throw new HDIVException(errorMessage, e);
 		}
 	}
-	
+
 	/**
-	 * Encrypts <code>data</code> in a single-part operation, or finishes a
-	 * multiple-part operation. The data is encrypted depending on how this cipher
-	 * was initialized.
+	 * Encrypts <code>data</code> in a single-part operation, or finishes a multiple-part operation. The data is
+	 * encrypted depending on how this cipher was initialized.
 	 * <p>
-	 * The bytes in the input buffer, and any input bytes that may have been buffered
-	 * during a previous update operation, are processed, with padding (if requested)
-	 * being applied. The result is stored in a new buffer.
+	 * The bytes in the input buffer, and any input bytes that may have been buffered during a previous update
+	 * operation, are processed, with padding (if requested) being applied. The result is stored in a new buffer.
 	 * </p>
 	 * <p>
-	 * if any exception is thrown, this cipher object may need to be reset before it
-	 * can be used again.
+	 * if any exception is thrown, this cipher object may need to be reset before it can be used again.
 	 * </p>
-	 * @param data The input buffer to encrypt
+	 * 
+	 * @param data
+	 *            The input buffer to encrypt
 	 * @return The new buffer with the result
-	 * @throws HDIVException if any exception is thrown in encryption process.
+	 * @throws HDIVException
+	 *             if any exception is thrown in encryption process.
 	 */
 	public byte[] encrypt(byte[] data) {
 
 		try {
 			return cipher.doFinal(data);
-			
-		} catch (Exception e) {			
+
+		} catch (Exception e) {
 			String errorMessage = HDIVUtil.getMessage("cipher.encrypt", e.getMessage());
-			throw new HDIVException(errorMessage, e);			
+			throw new HDIVException(errorMessage, e);
 		}
-	}	
-	
+	}
+
 	/**
-	 * Decrypts <code>data</code> in a single-part operation, or finishes a
-	 * multiple-part operation. The data is decrypted depending on how this cipher
-	 * was initialized.
+	 * Decrypts <code>data</code> in a single-part operation, or finishes a multiple-part operation. The data is
+	 * decrypted depending on how this cipher was initialized.
 	 * <p>
-	 * The bytes in the input buffer, and any input bytes that may have been buffered
-	 * during a previous update operation, are processed, with padding (if requested)
-	 * being applied. The result is stored in a new buffer.
+	 * The bytes in the input buffer, and any input bytes that may have been buffered during a previous update
+	 * operation, are processed, with padding (if requested) being applied. The result is stored in a new buffer.
 	 * </p>
 	 * <p>
-	 * if any exception is thrown, this cipher object may need to be reset before it
-	 * can be used again.
+	 * if any exception is thrown, this cipher object may need to be reset before it can be used again.
 	 * </p>
-	 * @param data The input buffer to decrypt
+	 * 
+	 * @param data
+	 *            The input buffer to decrypt
 	 * @return The new buffer with the result
-	 * @throws HDIVException if any exception is thrown in decryption process.
-	 */	
+	 * @throws HDIVException
+	 *             if any exception is thrown in decryption process.
+	 */
 	public byte[] decrypt(byte[] data) {
 
 		try {
 			return cipher.doFinal(data);
-			
-		} catch (Exception e) {			
+
+		} catch (Exception e) {
 			String errorMessage = HDIVUtil.getMessage("cipher.decrypt", e.getMessage());
-			throw new HDIVException(errorMessage, e);			
+			throw new HDIVException(errorMessage, e);
 		}
 	}
 
 	/**
-	 * @param transformation The transformation to set for the cipher factory bean.
-	 */	
+	 * @param transformation
+	 *            The transformation to set for the cipher factory bean.
+	 */
 	public void setTransformation(String transformation) {
 		this.transformation = transformation;
 	}
-	
+
 	/**
-	 * @param provider The provider to set.
+	 * @param provider
+	 *            The provider to set.
 	 */
 	public void setProvider(String provider) {
 		this.provider = provider;
-	}	
-	
+	}
+
 	public boolean isEncryptMode() {
 		return encryptMode;
 	}
