@@ -13,6 +13,7 @@ Release 2.1.4
  * Struts1 module for Hdiv. (Struts 1.3.8 support).
  * Fix Multipart request handing in Spring MVC (https://github.com/hdiv/hdiv/issues/14) and (https://github.com/hdiv/hdiv/issues/18).
  * JSF module for Hdiv. (JSF 1.1, 1.2, 2.0 and 2.1 support). Tested with Apache MyFaces and Sun RI.
+ * Fix error with multivalue url params.
 
 Release 2.1.3
 ==================================
